--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "cometlabs-backend-main",
+  "name": "cometlabs",
   "version": "1.0.0",
-  "description": "Submission for cometlabs internship assignment",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "request": "^2.88.2"
+  }
 }
