--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "nodemon" : "2.0.22"
   }
 }
