--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "cometlabs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev" : "nodemon server.js"
+  },
+  "engine" : {
+    "node" : "18.15.0"
   },
   "author": "",
   "license": "ISC",
