--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "builds": [
       { 
-            "src":"server.js", 
-            "use":"@now/node"
+            "src":",/server.js", 
+            "use":"@vercel/node"
       }
     ],
     "routes":[
